@startuml graph-service-architecture
allowmixing
title Graph Service Architecture

' ================== THEME ==================
skinparam backgroundColor #F7FBFC
skinparam shadowing true
skinparam roundcorner 15

skinparam package {
    BorderColor #2E86AB
    FontStyle bold
}

skinparam class {
    BackgroundColor #FFFFFF
    BorderColor #2E86AB
}

skinparam interface {
    BackgroundColor #EAF6FB
    BorderColor #1B4F72
}

skinparam rectangle {
    BackgroundColor #E8F8F5
    BorderColor #1ABC9C
}

skinparam database {
    BackgroundColor #FEF5E7
    BorderColor #D68910
}

skinparam note {
    BackgroundColor #FFF9E6
    BorderColor #CC8800
}

' ================== ALGORITHM LAYER ==================
package "Algorithm Layer" #EAF6FB {
    rectangle "MST" as mst
    rectangle "Dijkstra" as dijkstra
    rectangle "A* Search" as astar
    rectangle "Time-Aware" as timeaware
    rectangle "Dynamic Programming" as dp
    rectangle "Greedy" as greedy
}

' ================== GRAPH SERVICE LAYER ==================
package "Graph Service Layer" #FDFEFE {

    class "IGraphService" as igraph <<interface>> {
        + GetGraphAsync()
        + GetGraphWithTrafficAsync()
        + GetGraphWithPlannedRoadsAsync()
        + GetSubgraphByBoundsAsync()
        + GetCriticalSubgraphAsync()
        + GetNodeAsync()
        + GetOutgoingEdgesAsync()
        + GetIncomingEdgesAsync()
        + GetEdgeAsync()
    }

    class GraphService {
        - dbContext
        --
        + BuildGraphAsync()
        + ConvertRoadsToEdgesAsync()
    }

    class Graph {
        - Nodes
        - Edges
        - AdjacencyList
        - NodeIndex
        - EdgeIndex
    }

    class GraphNode {
        - Id
        - Name
        - X
        - Y
        - Population
        - IsCritical
    }

    class GraphEdge {
        - Id
        - FromNodeId
        - ToNodeId
        - Distance
        - Capacity
        - Condition
        - IsExisting
        - ConstructionCost
        - CurrentTraffic
        - MaintenancePriority
    }
}

' ================== DATA LAYER ==================
package "Data Layer" #FEF9E7 {
    rectangle "LocationService" as locServ
    rectangle "RoadService" as roadServ
    rectangle "TrafficService" as traffServ
    database "SQLite DB" as db
}

' ================== RELATIONSHIPS ==================

' Algorithm -> Graph Service
mst --> igraph
dijkstra --> igraph
astar --> igraph
timeaware --> igraph
dp --> igraph
greedy --> igraph

' Interface implementation
igraph <|.. GraphService

' Graph structure
GraphService --> Graph
Graph *-- GraphNode
Graph *-- GraphEdge

' Data connections
GraphService --> locServ
GraphService --> roadServ
GraphService --> traffServ

locServ --> db
roadServ --> db
traffServ --> db

' ================== NOTES ==================
note top of igraph
    Unified abstraction layer
    for all graph algorithms
end note

note right of GraphService
    Builds graph from:
    - Locations -> Nodes
    - Roads -> Edges
    - Traffic -> Weights
end note

note right of Graph
    Optimized structure:
    - O(1) Node lookup
    - Fast adjacency traversal
end note

note bottom
    All algorithms depend on a shared graph model
    ensuring consistency and scalability
end note

@enduml
